# videodownloader

./: CMakeLists.txt  LICENSES-windows-distribution.md  README.md  videodownloader.doxygen  videodownloader.pro
application/: main.cpp  utils.cpp  utils.h
cli/: clidownloadinteraction.cpp  clidownloadinteraction.h  mainfeatures.cpp  mainfeatures.h
gui/: adddownloaddialog.cpp  adddownloaddialog.h  adddownloaddialog.ui  addmultipledownloadsdialog.cpp  addmultipledownloadsdialog.h  addmultipledownloadsdialog.ui  addmultipledownloadsentertermpage.ui  addmultipledownloadsresultspage.ui  addmultipledownloadsselectsourcepage.ui  addmultipledownloadswizard.cpp  addmultipledownloadswizard.h  downloadinteraction.cpp  downloadinteraction.h  downloadwidget.cpp  downloadwidget.h  downloadwidget.ui  initiate.cpp  initiate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  proxypage.ui  setrangedialog.cpp  setrangedialog.h  setrangedialog.ui  settings.cpp  settings.h  targetpage.ui  useragentpage.ui
itemdelegates/: comboboxitemdelegate.cpp  comboboxitemdelegate.h  progressbaritemdelegate.cpp  progressbaritemdelegate.h
misc/: groovesharkAlbumGetAllSongs.json  groovesharkAlbumResults.json  itags.ods
model/: downloadfinderresultsmodel.cpp  downloadfinderresultsmodel.h  downloadmodel.cpp  downloadmodel.h
network/: authenticationcredentials.h  bitsharedownload.cpp  bitsharedownload.h  download.cpp  download.h  downloadrange.cpp  downloadrange.h  filenukedownload.cpp  filenukedownload.h  groovesharkdownload.cpp  groovesharkdownload.h  httpdownload.cpp  httpdownload.h  httpdownloadwithinforequst.cpp  httpdownloadwithinforequst.h  optiondata.cpp  optiondata.h  permissionstatus.h  socksharedownload.cpp  socksharedownload.h  spotifydownload.cpp  spotifydownload.h  testdownload.cpp  testdownload.h  vimeodownload.cpp  vimeodownload.h  youtubedownload.cpp  youtubedownload.h
network/finder/: downloadfinder.cpp  downloadfinder.h  groovesharksearcher.cpp  groovesharksearcher.h  linkfinder.cpp  linkfinder.h  youtubeplaylist.cpp  youtubeplaylist.h
network/misc/: contentdispositionparser.cpp  contentdispositionparser.h
pkgbuild/default/: PKGBUILD
pkgbuild/mingw-w64/: PKGBUILD
resources/: icons.qrc  json.qrc  windowsicon.rc
resources/desktop/applications/: videodownloader.desktop
resources/icons/hicolor/128x128/misc/: youtubedownload.psd
resources/json/: groovesharkauthenticationinfo.json  itaginfo.json
